// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing PopUp component Testing Popup with props  1`] = `
<PopUp
  active={true}
  dialogText="Please enter a comment:"
  placeholder="Type..."
  rows="5"
  saveButtonText="Save"
>
  <div>
    <div
      className="modal undefined"
    >
      <div
        className="modal-content undefined"
      >
        <span
          className="close undefined"
          onClick={[Function]}
        >
          ×
        </span>
        <div
          className="dialog-window undefined"
        >
          Please enter a comment:
        </div>
        <div
          className="dialog-input undefined"
        >
          <textarea
            autoFocus={true}
            className="dialog-input-textarea undefined"
            onChange={[Function]}
            placeholder="Type..."
            rows="5"
            type="text"
          />
        </div>
        <div
          className="dialog-buttons undefined"
        >
          <span
            className="save-button"
          >
            Save
          </span>
          <span
            className="cancel-button"
            id="close-container"
            onClick={[Function]}
          >
            Cancel
          </span>
        </div>
      </div>
    </div>
  </div>
</PopUp>
`;

exports[`Testing PopUp component Testing Popup with props  2`] = `
<PopUp
  active={false}
  dialogText="Please enter a comment:"
  placeholder="Type..."
  rows="5"
  saveButtonText="Save"
>
  <div />
</PopUp>
`;

exports[`Testing PopUp component render PopUp component  1`] = `
<PopUp
  active={true}
  dialogText=""
  placeholder="Type..."
  rows="5"
  saveButtonText="Save"
>
  <div>
    <div
      className="modal undefined"
    >
      <div
        className="modal-content undefined"
      >
        <span
          className="close undefined"
          onClick={[Function]}
        >
          ×
        </span>
        <div
          className="dialog-window undefined"
        />
        <div
          className="dialog-input undefined"
        >
          <textarea
            autoFocus={true}
            className="dialog-input-textarea undefined"
            onChange={[Function]}
            placeholder="Type..."
            rows="5"
            type="text"
          />
        </div>
        <div
          className="dialog-buttons undefined"
        >
          <span
            className="save-button"
          >
            Save
          </span>
          <span
            className="cancel-button"
            id="close-container"
            onClick={[Function]}
          >
            Cancel
          </span>
        </div>
      </div>
    </div>
  </div>
</PopUp>
`;
